# multiagents

./: .env.example  .gitignore  DESIGN.md  README.md  cli.py  pyproject.toml  pytest.ini  requirements.txt
conv_gen/: models.py  output_format.py
conv_gen/agents/: __init__.py  assistant.py  base.py  director.py  orchestrator.py  plan.py  tool_executor.py  user_simulator.py
conv_gen/graph/: __init__.py  builder.py
conv_gen/ingestor/: __init__.py  downloader.py  parser.py  registry.py  schema_enricher.py  selector.py
conv_gen/judgellm/: __init__.py  judge.py
conv_gen/memory/: __init__.py  context.py  steering.py
conv_gen/sampler/: __init__.py  sampler.py  scenario.py
conv_gen/simulator/: __init__.py  executor.py
output/: comparison.json  run_no_steering.jsonl  run_with_steering.jsonl
saplvl/: __init__.py  models.py
saplvl/agents/: __init__.py  assistant.py  base.py  orchestrator.py  tool_executor.py  user_simulator.py
saplvl/graph/: __init__.py  builder.py
saplvl/ingestor/: __init__.py  downloader.py  parser.py  registry.py
saplvl/judgellm/: __init__.py  judge.py
saplvl/memory/: __init__.py  context.py  steering.py
saplvl/sampler/: __init__.py  sampler.py  scenario.py
saplvl/simulator/: __init__.py  executor.py
tests/: conftest.py  test_agents.py  test_e2e.py  test_graph.py  test_ingestor.py  test_judge.py  test_memory.py  test_orchestrator.py  test_output_format.py  test_sampler.py  test_simulator.py
